--- a/_posts/2016-07-23-AsiaJet.md
+++ b/_posts/2016-07-23-AsiaJet.md
@@ -15,7 +15,7 @@ For more information:
 The Schematic diagram is provided by <a href="https://eps.harvard.edu/people/duo-chan">Chris</a> and <a href="http://eddy.nju.edu.cn/yzhang/">Professor Zhang</a>:
  
 
-![AsiaJet](https://raw.githubusercontent.com/Clynie/Clynie.github.io/master/assets/images/Asiajet.jpg)
+![AsiaJet](https://github.com/Clynie/Clynie.github.io/blob/master/_img/Asiajet.jpg?raw=true)
 
 
 
