add v2ray setting

--- a/_posts/2019-05-19-V2Ray.md
+++ b/_posts/2019-05-19-V2Ray.md
@@ -8,6 +8,11 @@ notes: true
 
 **This post is a tutorial about setting V2Ray on Linux server and Windowx/Mac client.**
 
+
+**FIRST OF ALL, YOU NEED A SERVER.**
+
+
+
 ****
 
 See in [github](https://github.com/v2ray/v2ray-core) and [v2ray](https://www.v2ray.com/chapter_00/start.html)
@@ -50,6 +55,9 @@ sudo systemctl start v2ray
 ### For Mac
 
 Please Download [V2RayX](https://github.com/Cenmrev/V2RayX)
+
+Or just `brew cask install v2rayx`
+
 
 
 ```bash
