--- a/_posts/2020-02-12-ElNino.md
+++ b/_posts/2020-02-12-ElNino.md
@@ -10,8 +10,10 @@ The [Science](http://science.sciencemag.org/) publish a research [Pantropical cl
 
 
 
-![Evolution of tropical interbasin interactions during a typicalEl Niño event.](https://github.com/Clynie/Clynie.github.io/blob/master/_img/El Nino.jpg?raw=true)
+![Evolution of tropical interbasin interactions during a typical El Niño event.](https://github.com/Clynie/Clynie.github.io/blob/master/_img/El Nino.jpg?raw=true)
 
+
+## Evolution of tropical interbasin interactions during a typicalEl Niño event.
 
 ### A.Mean: 
 *  太平洋和印度洋
