--- a/_posts/2017-10-16-Budget.md
+++ b/_posts/2017-10-16-Budget.md
@@ -2,7 +2,8 @@
 layout: post-for-research
 title:  "The budget of local available potential energy of low-frequency eddies in Northern Hemispheric winter"
 date:   2017-10-16 19:15:26 +0800
-excerpt: "LF EAPE"
+excerpt: "Low-frequency (LF) transient eddies (intra-seasonal eddies with time scales longer than 10 days) is more and more found important in large-scale atmospheric circulations, high-impact climate events and subseasonal-to-seasonal forecast. In this study, features and the maintenance of available potential energy of LF eddies (LF EAPE), which denotes LF temperature fluctuations, have been investigated. Our study shows that wintertime LF EAPE exhibits much greater amplitude than that of the extensively studied high-frequency (HF) eddies, with distinct horizontal and vertical structures. Different from HF eddies, whose action centers are over midlatitude oceans, the LF EAPE is most active in the populated continents in midlatitude as well as the subpolar region. 
+By diagnosing the derived energy budget of LF EAPE, we find that the LF perturbations with the upstream strong LF EKE in ocean basins and the strong background temperature gradient in mid- and high-latitude continents (e.g. the costal regions along Greenland-Barents-Kara sea) together result in strong baroclinic generation, which is the major source of LF EAPE.  The generated LF EAPE in the subpolar region is transported downstream and southward to midlatitude continents via background flow, which can result in persistent temperature fluctuations (i.e. cold surge) in Eurasia and North America. The generated LF EAPE is also transferred to HF EAPE via cross-frequency eddy-eddy interactions and converted to LF EKE via vertical motions. The above energy budget suggests that, in addition to the classical Lorenz energy cycle between eddy and zonal mean flow, there is an energy cycle between LF and HF eddies, indicating a linkage between eddies in midlaittude and polar regions."
 research: true
 ---
 
