--- a/_posts/2020-02-12-ElNino.md
+++ b/_posts/2020-02-12-ElNino.md
@@ -13,7 +13,16 @@ The [Science](http://science.sciencemag.org/) publish a research [Pantropical cl
 ![Evolution of tropical interbasin interactions during a typical El Niño event.](https://github.com/Clynie/Clynie.github.io/blob/master/_img/El Nino.jpg?raw=true)
 
 
-## Evolution of tropical interbasin interactions during a typicalEl Niño event.
+## Evolution of tropical interbasin interactions during a typical El Niño event.
+
+* 太平洋和印度洋
+	* 主要是通过大气的Walk环流以及印尼群岛之间的海洋相连接的。
+	* 大气的Walk环流在ENSO于IOB和IOD的相互作用间起到了决定的作用；另外海洋(印度尼西亚流：ITF)对印度洋-太平洋之间的 海洋交换也起了重要的作用。
+* 大西洋和太平洋具有双向的影响
+	* ENSO强迫产生赤道大西洋变率
+	* 大西洋变率反过来影响ENSO
+
+
 
 ### A.Mean: 
 *  太平洋和印度洋
@@ -62,7 +71,21 @@ The [Science](http://science.sciencemag.org/) publish a research [Pantropical cl
 		* IOB增温主要是由于：
 			1. 表面蒸发作用的减少，
 			2. 由于El Nino的remote forcing导致的短波辐射的增加
+	* IOB虽然是由El Nino产生，但是它加速了El Nino的消亡
+		*  当El Nino达到成熟期的时候
+			1. IOB增强了印度洋的对流活动
+			2. 这个对流活动将反过来增强西北太平洋反气旋异常，赤道西太平洋的东风
+			3. 赤道东风的到来以及持续从冬季到来年夏季，加速了El Nino的消亡 (F)
+			4. 导致了IOB两年(biennial)的周期
+	* 较强的正位相的IOD导致长时间维持的IOB
+	* 导致El Nino向La Nina的快速转换。
+		* IOD——IOB——风场的突然变化
+		* 太平洋降温
 *  大西洋赤道北部(NTA: North Tropical Atlantic)增温
+	* 赤道太平洋影响大西洋：
+		1. 通过Walk环流，在大西洋减弱的Walk环流使得大西洋的活动减少
+		2. 激发PNA模态，其表面低压中心位于副热带大西洋西部
+
 
 ### E. MAM：
 
@@ -72,6 +95,24 @@ The [Science](http://science.sciencemag.org/) publish a research [Pantropical cl
 	1. 加强了对流活动
 	2. 激发了跨赤道的不对称的风场异常
 	3. 这个风场异常随后使得印度洋增温
+* 赤道大西洋北部(NTA)在春季显著增温，3-5个月滞后于El Nino成熟(12月)：
+	* NTA增温：
+		1. 热带：东北信风减弱导致地表前热通量减少
+		2. 中纬度：PNA的低压异常位于北部，活动减弱在南部，维持了风蒸发反馈：
+			* 风蒸发反馈主要发生在，当暖洋面上风场的减弱会导致蒸发减少，使得洋面进一步增温；
+			* 冷洋面上风场增强，导致蒸发作用增强，使得洋面进一步降温。
+			* 风蒸发反馈的符号主要取决于风场异常相对于平均态是减弱还是增强。
+		3. 模式均能模拟热带和中纬度机制，但是两者作用的相对大小并不确定
+			1. 这是由于东北信风的减弱的原因：
+				1. Walk环流和局地Hadley环流的异常
+				2. Gill-type对亚马逊加热的响应
+					* Gill-type是对热带加热异常的响应：
+						* 东部-赤道大气Kelvin波：伴随着地面的东风异常
+						* 西部-大气Rossby波：伴随着出现一对低压中心，两个气旋性西风异常位于赤道
+				3. 对流层对El Nino的增温响应
+
+
+
 
 ### F. JJA：post-El Nino summer monsoon：
 
@@ -85,3 +126,11 @@ The [Science](http://science.sciencemag.org/) publish a research [Pantropical cl
 *  北太平洋的La Nina条件继续加强并移动对流活动，使之向西延伸
 
 
+
+
+## Tropical Atlantic influence on the Pacific
+
+
+
+
+![Tropical Atlantic influence on the Pacific](https://github.com/Clynie/Clynie.github.io/blob/master/_img/Pacific-Atlantic.png?raw=true)
