--- a/_posts/2020-02-12-ElNino.md
+++ b/_posts/2020-02-12-ElNino.md
@@ -138,21 +138,34 @@ The [Science](http://science.sciencemag.org/) publish a research [Pantropical cl
 
 
 事实上，赤道北大西洋(NTA)增温同样也会影响ENSO
-1. MAM:  
-	1. NTA异常增温
-	2. 激发出Rossby波向西传播
-		 * 导致在副热带东北太平洋，东北信风的异常
-	3. Kelvin波
-		* 在整个印度洋产生东风异常
-2. JJA:  
-	1. 产生SST的异常降温以及随后季节的降水异常减小
-	2. 反气旋异常西伸(Fig.1F)
-	3. 比较有利于CP型ENSO
-3. DJF:  
-	* 赤道东太平洋的东风异常反过来会产生La Nina
 
-统计上，赤道大西洋Nino/Nina超前于太平洋的La Nina/El Nino 有着显著的负相关
+
+### MAM:  
+
+1. NTA异常增温
+2. 激发出Rossby波向西传播
+	 * 导致在副热带东北太平洋，东北信风的异常
+3. Kelvin波
+	* 在整个印度洋产生东风异常
+
+### JJA:  
+
+1. 产生SST的异常降温以及随后季节的降水异常减小
+2. 反气旋异常西伸(Fig.1F)
+3. 比较有利于CP型ENSO
+
+### DJF:  
+
+* 赤道东太平洋的东风异常反过来会产生La Nina
+
+
+
+### 统计上
+
+赤道大西洋Nino/Nina超前于太平洋的La Nina/El Nino 有着显著的负相关
+
 EG.
+
 * 大西洋Nino，在北半球夏季达到最大
 * 在大西洋产生异常上升运动，在中太平洋产生异常下沉运动
 * 相对应的在中太平洋和西太平洋产生东风异常
@@ -161,7 +174,7 @@ EG.
 
 
 
-
+## Rise of the tropical Atlantic influence
 
 ![Decadal interbasin connections with the Pacific](https://github.com/Clynie/Clynie.github.io/blob/master/_img/decadal_interbasin.png?raw=true)
 
