--- a/_posts/2019-07-04-AsiaJet.md
+++ b/_posts/2019-07-04-AsiaJet.md
@@ -6,14 +6,7 @@ excerpt: "The East Asian jet has evident interannual variability in strength and
 research: true
 ---
 
-It is inspiringto cooperate with <a href="https://eps.harvard.edu/people/duo-chan">Chris</a> and <a href="http://eddy.nju.edu.cn/yzhang/">Professor Zhang</a> on Inter-annual variability of the East Asian Jet Stream. The work will be submitted to submitted to J. Climate soon.
-
-For more information:
-
-<li> Chan, D. , <strong>Zhang</strong>, <strong>Y.*</strong> , and Wu, Q., 2015 : Inter-annual variability in strength and position of the East Asian Jet Stream: Dynamics and its linkage to extra-tropical large-scale circulations. (submitted to J. Climate)</li>
-
-The Schematic diagram is provided by <a href="https://eps.harvard.edu/people/duo-chan">Chris</a> and <a href="http://eddy.nju.edu.cn/yzhang/">Professor Zhang</a>:
- 
+It is inspiringto cooperate with <a href="https://eps.harvard.edu/people/duo-chan">Chris</a> and <a href="http://eddy.nju.edu.cn/yzhang/">Professor Zhang</a> on Inter-annual variability of the East Asian Jet Stream. The work is published in [Climate Dynamics](https://link.springer.com/article/10.1007/s00382-020-05127-3).
 
 ![Climate_AsiaJet](https://github.com/Clynie/Clynie.github.io/blob/master/_img/Cli_Asiajet.png?raw=true)
 
