--- a/_posts/2020-01-16-WyFeng.md
+++ b/_posts/2020-01-16-WyFeng.md
@@ -2,11 +2,11 @@
 layout: post-for-research
 title:  "Intra-seasonal variation, future projection and attribution of haze diffusion condition over East China"
 date:   2020-01-16 19:15:26 +0800
-excerpt: "The diffusion conditions and their changes under future warming scenarios are examined"
+excerpt: "Future projection of diffusion conditions associated with extreme haze events over East China is of great importance to government emission regulations and public human health. Here the diffusion conditions and their changes under future warming scenarios are examined. The relative strength of haze events in Northern China Plain (NCP) have increased from 150% during 2006-2015 to 190% during 2090-2099 under RCP8.5 scenarios, induced by stronger and longer-lingering anti-cyclone anomaly in Eastern China. The strengthened anticyclone anomaly is mainly induced by increased north wave train convergence emanating from Barents-Kara Sea, and the longer duration of anticyclone anomaly is mainly induced by stronger local feedback which can extract more energy from the basic state to maintain the anticyclone anomaly in Eastern China. Aerosol reduction is found to play a dominant role in strengthening the upstream wave train near Barents-Kara Sea and the downstream anti-cyclone in Eastern China, while the effects from greenhouse gases increase are small. Results in this study indicate that aerosol reduction east of Scandinavia Peninsula induced radiation effects can strengthen upstream wave train by baroclinic conversion which is conducive to haze formation in Eastern China., suggesting more stringent regulations on aerosol emissions in China are needed to meet air quality standards."
 research: true
 ---
 
-The work is cooperate with [Professor Minghuai WANG](https://as.nju.edu.cn/54/50/c11339a218192/page.htm), [Professor Yang ZHANG](https://as.nju.edu.cn/54/59/c11339a218201/page.htm), and Weiyang FENG
+The work is cooperate with Feiyang FENG, [Professor Minghuai WANG](https://as.nju.edu.cn/54/50/c11339a218192/page.htm), [Professor Yang ZHANG](https://as.nju.edu.cn/54/59/c11339a218201/page.htm).
 The paper will be published.
 
 
