change content of dycore

--- a/_posts/2014-03-07-dycore.md
+++ b/_posts/2014-03-07-dycore.md
@@ -1,9 +1,9 @@
 ---
-layout: post-for-research
+layout: post-for-notes
 title:  "GFDL Dynamical Core Set"
 date:   2014-03-07 19:15:26 +0800
 excerpt: "dycore"
-research: true
+notes: true
 ---
 
 
