change content of dycore

--- a/_posts/2014-03-07-dycore.md
+++ b/_posts/2014-03-07-dycore.md
@@ -13,45 +13,34 @@ The first in the proposed series of benchmark calculations is described in this 
 
 ---
 
-<dl>
-  <dt>Benchmark</dt>
-  <dd><img src="http://latex.codecogs.com/gif.latex?\frac{\partial{v}}{\partial{t}}=...-k_{v}(\sigma)v" /></dd>
-  <dt></dt>
-  <dd><img src="http://latex.codecogs.com/gif.latex?\frac{\partial{T}}{\partial{t}}=...-k_{T}(\phi,\sigma)[T-T_{eq}(\phi,p)]" /></dd>
-  <dt></dt>
-  <dd><img src="http://latex.codecogs.com/gif.latex?T_{eq}=max\{200K,[]\}" /></dd>
-  <dt></dt>
-  <dd><img src="http://latex.codecogs.com/gif.latex?k_T=..." /></dd>
-  <dt></dt>
-  <dd><img src="http://latex.codecogs.com/gif.latex?k_v=..." /></dd>
-  <dt></dt>
-  <dd><img src="http://latex.codecogs.com/gif.latex?\sigma_b=..." /></dd>
-  <dd><img src="http://latex.codecogs.com/gif.latex?k_f=..." /></dd>
-</dl>
+$$\frac{\partial{v}}{\partial{t}}=...-k_{v}(\sigma)v$$
+
+$$\frac{\partial{T}}{\partial{t}}=...-k_{T}(\phi,\sigma)[T-T_{eq}(\phi,p)]$$
+
+$$T_{eq}=max\{200K,[]\}$$
+
+$$k_T=...$$
+
+$$k_v=...$$
+
+$$\sigma_b=...$$
+
+$$k_f=...$$
 
 The model is design for multi-core, but the single core is enough for T42 simulations. You need modify the `mkmf.template.ifc` in `./bin/` if you are using ifortran :
 
-{% highlight ruby %}
+```bash
 # mkmf -t template.ifc -c"-Duse_libMPI -Duse_netCDF" path_names /usr/local/include
 FFLAGS = -stack_temps -safe_cray_ptr -ftz -i_dynamic \
 	-assume byterecl -O2 -i4 -r8 -w95 \
 	-I/opt/netcdf-3.6.3-intel/include
-{% endhighlight %}
+```
 
 and the `fms.script` in `./exp/spectral/`
 
-{% highlight ruby %}
+```bash
 $mkmf -p fms.x -t $template -c "-Duse_netCDF" -a \
 	$sourcedir $pathnames /usr/local/include \
 	$sourcedir/shared/mpp/include $sourcedir/shared/include
-{% endhighlight %}
+```
 
-<!--div class="highlight"><pre><span class="k">class</span> <span class="nc">Greeter</span>
-  <span class="k">def</span> <span class="nf">initialize</span><span class="p">(</span><span class="n">message</span><span class="p">)</span>
-    <span class="vi">@message</span> <span class="o">=</span> <span class="n">message</span>
-  <span class="k">end</span>
-
-  <span class="k">def</span> <span class="nf">greet</span>
-    <span class="nb">puts</span> <span class="n">message</span>
-  <span class="k">end</span>
-<span class="k">end</span>
