--- a/_posts/2020-02-17-DL-Atmos.md
+++ b/_posts/2020-02-17-DL-Atmos.md
@@ -29,7 +29,7 @@ In the Paper, author review the development of machine learning in the geoscient
 ![Big data challenges in the geoscientific context.](https://github.com/Clynie/Clynie.github.io/blob/master/_img/Big_data_challenges_in_the_geoscientific.png?raw=true)
 
 
-首先文章介绍了地球系统的资料属于标准的__“Four V's”__ of __“Big Data”__:__Volume__(深度), __velocity__(更新速度), __Variety__(多样性), __Veracity__(真实性)。
+首先文章介绍了地球系统的资料属于标准的 **“Four V's”** of __“Big Data”__:__Volume__(深度), __velocity__(更新速度), __Variety__(多样性), __Veracity__(真实性)。
 
 紧接着文章提到了两个：“事实”：
 1. 我们收集、创造数据的能力远远的超过我们能够明智的选择数据的能力，更别说理解它们。
