--- a/_posts/2020-02-17-DL-Atmos.md
+++ b/_posts/2020-02-17-DL-Atmos.md
@@ -42,3 +42,19 @@ In the Paper, author review the development of machine learning in the geoscient
 
 
 ![Four examples of typical deep learning applications.](https://github.com/Clynie/Clynie.github.io/blob/master/_img/Four examples of typical deep learning applications.png?raw=true)
+
+
+
+
+
+
+
+
+## Integration with physical modelling
+
+
+
+
+
+
+
