--- a/_posts/2020-02-18-Crawl.md
+++ b/_posts/2020-02-18-Crawl.md
@@ -150,7 +150,26 @@ sudo mongod
 ```
 
 
+下面是另一个爬虫：
 
+
+# StockSpider
+
+
+
+```bash
+git clone https://github.com/Clynie/StockSpider-1.git
+```
+## README:
+
+股票数据爬虫+分析+可视化框架
+
+
+
+
+## 爬取的数据是这样的：
+
+__这是一个test__
 
 ![test_1](https://github.com/Clynie/Clynie.github.io/blob/master/_img/Crawl_test_1.png?raw=true)
 
