add my DL-Atmos

--- a/_posts/2020-02-17-DL-Atmos.md
+++ b/_posts/2020-02-17-DL-Atmos.md
@@ -45,6 +45,15 @@ In the Paper, author review the development of machine learning in the geoscient
 
 
 
+作者介绍了深度学习的四个引用例子：
+
+* Object recognition 对应极端事件识别
+* Super-resolution applications 对应分辨率处理
+* Video prediction 对应短临预测
+* Language translation 对应时间序列预测
+
+我是个初学者，对于上面作者提到的四个例子，我个人觉得其实主要就是一个是CNN和Sequence Model的应用。
+比较容易的是可以采用[YOLO](https://pjreddie.com/darknet/yolo/)
 
 
 
@@ -52,7 +61,22 @@ In the Paper, author review the development of machine learning in the geoscient
 
 ## Integration with physical modelling
 
+在模式方面，一般来说物理模式和机器学习被认为是两种不同领域；一个是根据理论，一个是根据数据。
+但是这两个方式其实应该是互补的；因此作者在这里阐述了如何将数据科学应用到理论科学中。
 
+
+
+![Linkages between physic    al models and machine learning.](https://github.com/Clynie/Clynie.github.io/blob/master/_img/Linkages between physical models and machine learning.jpg?raw=true)
+
+
+
+
+
+
+
+
+
+![Interpretation of hybrid modelling](https://github.com/Clynie/Clynie.github.io/blob/master/_img/Interpretation of hybrid modelling.jpg?raw=true)
 
 
 
