add my algrithm

--- a/_posts/2020-02-17-DL-Atmos.md
+++ b/_posts/2020-02-17-DL-Atmos.md
@@ -47,7 +47,7 @@ In the Paper, author review the development of machine learning in the geoscient
 
 作者介绍了深度学习的四个引用例子：
 
-* Object recognition 对应极端事件识别
+* [Object recognition](https://github.com/eracah/hur-detect.git) 对应极端事件识别
 * Super-resolution applications 对应分辨率处理
 * Video prediction 对应短临预测
 * Language translation 对应时间序列预测
