--- a/_posts/2020-02-18-Crawl.md
+++ b/_posts/2020-02-18-Crawl.md
@@ -1,9 +1,9 @@
 ---
-layout: post-for-notes
+layout: post-for-project
 title:  "Crawl in My MacOs"
 date:   2020-02-18 13:52:03 +0800
 excerpt: "爬虫安装以及引用"
-notes: true
+project: true
 ---
 
 
@@ -17,7 +17,10 @@ notes: true
 * 预测股价.
 
 ```bash
-git clone https://github.com/TrojanAZhen/XueQiu_Stock_Spider.git
+# 这个爬虫是根据
+$ git clone https://github.com/TrojanAZhen/XueQiu_Stock_Spider.git
+# 进行修改的，修改过后的版本可以在
+$ git clone https://github.com/Clynie/XueQiu_Stock_Spider.git
 ```
 
 ## README:
@@ -50,7 +53,15 @@ python3 -m ipykernel install --user --name=complex_network
 
 ```
 
+The python2.7 required packages is 
 
+```md
+requests
+sklearn
+pymongo
+redis==3.0
+url==0.2
+```
 
 
 ## 安装Redis：
