--- a/_posts/2020-02-18-useful.md
+++ b/_posts/2020-02-18-useful.md
@@ -9,3 +9,41 @@ algorithm: true
 
 # 排序
 
+* 比如现在有两个序列`serial`和`tstamp`是一一对应的，我们的目的是对两者根据其中一个序列进行排序
+* 例如根据对时间戳`tstamp`按照时间序列`serial`的大小进行排序：
+
+```python
+r_serial	= sorted(serial) # from the minimun to maximun
+r_tstamp	= [x for _, x in sorted(zip(serial,tstamp), key=lambda pair: pair[0])]
+```
+
+这个例子的目的是**活用lambda** 
+
+
+# 查找
+
+* 比如在一个序列中我们需要查找一个数或者字符的位置
+* 有两种方法：
+* 第一种就是采用`index`
+
+```python
+>>> a = [1,2,3,4,5,6,7]
+>>> a.index(3)
+2
+>>>
+```
+
+* 第二种就是我早年不懂事，走了很多弯路，采用的是
+
+```python
+>>> import numpy as np
+>>> a = np.array([1,2,3,4,5,6,7])
+>>> np.argmin(abs(a - 3))
+2
+>>>
+```
+
+
+
+
+
