add my algrithm

--- a/_posts/2020-02-18-useful.md
+++ b/_posts/2020-02-18-useful.md
@@ -43,6 +43,88 @@ r_tstamp	= [x for _, x in sorted(zip(serial,tstamp), key=lambda pair: pair[0])]
 >>>
 ```
 
+# 统计个数
+
+主要有四种方法：根据[come&](https://blog.csdn.net/sinat_24091225/article/details/77925473)整理的结果：
+
+1. 利用字典dict来完成统计
+
+```python
+a = [1, 2, 3, 1, 1, 2]
+dict = {}
+for key in a:
+    dict[key] = dict.get(key, 0) + 1
+print dict
+```
+
+输出结果：
+
+```python
+>>>{1: 3, 2: 2, 3: 1}
+```
+
+2. 利用Python的collection包下Counter的类
+
+```python
+from collections import Counter
+a = [1, 2, 3, 1, 1, 2]
+result = Counter(a)
+print result
+```
+输出结果：
+
+```python
+>>>{1: 3, 2: 2, 3: 1}
+```
+3. Python的pandas包下的value_counts方法
+
+```python
+import pandas as pd
+a = [1, 2, 3, 1, 1, 2]
+result = pd.value_counts(a)
+print result
+```
+输出结果：
+
+```python
+>>>1    3
+   2    2
+   3    1
+```
+
+注：利用pandas下的value_counts()，不仅可以统计list中各个元素出现的个数，还可对矩阵中的元素进行进行统计。 
+
+```python
+import pandas as pd
+a = pd.DataFrame([[1,2,3],
+                  [3,1,3],
+                  [1,2,1]])
+result = a.apply(pd.value_counts)
+print result
+```
+
+输出结果：
+
+```python
+$ 2.0  1.0  1.0  # 表示元素1在第一列出现2次，在第二列出现1次，在第三列出现1次
+$ NaN  2.0  NaN  # 表示元素2在第一列出现0次，在第二列出现2次，在第三列出现0次
+$ 1.0  NaN  2.0  # 表示元素3在第一列出现1次，在第二列出现0次，在第三列出现2次
+```
+
+4. 如果是列表`list`
+
+```python
+>>> a = [1,2,3,4,5,6,7]
+>>> a.count(1)
+1
+# 仅仅针对列表
+>>> import numpy as np
+>>> a = np.array([1,2,3,4,5,6,7])
+>>> a.count(1)
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+AttributeError: 'numpy.ndarray' object has no attribute 'count'
+```
 
 
 
