add my algrithm

--- a/_posts/2020-02-18-useful.md
+++ b/_posts/2020-02-18-useful.md
@@ -25,12 +25,12 @@ r_tstamp	= [x for _, x in sorted(zip(serial,tstamp), key=lambda pair: pair[0])]
 * 比如在一个序列中我们需要查找一个数或者字符的位置
 * 有两种方法：
 * 第一种就是采用`index`
+* __仅仅针对`list`的sequence__ 
 
 ```python
 >>> a = [1,2,3,4,5,6,7]
 >>> a.index(3)
 2
->>>
 ```
 
 * 第二种就是我早年不懂事，走了很多弯路，采用的是
@@ -40,7 +40,11 @@ r_tstamp	= [x for _, x in sorted(zip(serial,tstamp), key=lambda pair: pair[0])]
 >>> a = np.array([1,2,3,4,5,6,7])
 >>> np.argmin(abs(a - 3))
 2
->>>
+>>> np.where(a==3)
+(array([2]),)
+>>> a = np.array([[1,2,3,4,5,6,7],[7,6,5,4,3,2,1]])
+>>> np.where(a==3)
+(array([0, 1]), array([2, 4]))
 ```
 
 # 统计个数
