--- a/_posts/2020-02-22-Jupiter.md
+++ b/_posts/2020-02-22-Jupiter.md
@@ -1,9 +1,9 @@
 ---
-layout: post-for-research
+layout: post-for-papers
 title:  "Dynamics of Jupiter's Atmosphere"
 date:   2020-02-22 12:15:26 +0800
 excerpt: "Chapter 6"
-research: true
+papers: true
 ---
 
 
