fix name of weiyang

--- a/_posts/2020-01-16-WyFeng.md
+++ b/_posts/2020-01-16-WyFeng.md
@@ -6,7 +6,7 @@ excerpt: "Future projection of diffusion conditions associated with extreme haze
 research: true
 ---
 
-The work is cooperate with Feiyang FENG, [Professor Minghuai WANG](https://as.nju.edu.cn/54/50/c11339a218192/page.htm), [Professor Yang ZHANG](https://as.nju.edu.cn/54/59/c11339a218201/page.htm).
+The work is cooperate with Weiyang FENG, [Professor Minghuai WANG](https://as.nju.edu.cn/54/50/c11339a218192/page.htm), [Professor Yang ZHANG](https://as.nju.edu.cn/54/59/c11339a218201/page.htm).
 The paper will be published.
 
 
