--- a/_posts/2020-02-22-Jupiter.md
+++ b/_posts/2020-02-22-Jupiter.md
@@ -24,8 +24,39 @@ papers: true
 
 ## INTRODUCTION
 
+### Motivation
+
+之前也在想一个问题，就是为什么要研究其他星球，地球还不够研究吗？
+现在想想，这就是研究的第一步了，为什么研究其他星球的大气，有什么意义。
+意义就在于首先我们研究的是大气，其次是地球上的大气；如果仅仅关注的只有地球的大气，那么就是管中窥豹、一叶障目了。
+在这里还是对自己说，要跳出圈子看大气，也就是要有“大局意识”，着眼于小事。
+
+本章就讲的比较科学人：
+
+1. 在过去几十年对巨型星的研究给了我么许多有趣的发现
+2. 对木星对研究有助于扩充我们对大气对理解，以及对地球大气更深的了解，这种成果是在仅仅关注地球大气中无法得到的。
 
 
+在这里首先了解一下木星的背景知识：
+
+
+|项目|地球|木星|
+|----|----|----|
+|symbole||♃|
+|急流|1 per hemi|6 per hemi|
+|Topography|yes|no|
+|Stationary|yes|no|
+|Storm|last for centry|travelling storm is ~ 1 week|
+|Absorbed sunlight|1|3.3%|
+|Wind Intensity|1|$$3-4 \times Earth\ but\ 1/3\times Saturn\ Neptune$$|
+|$$\frac{internal\ power}{absorbed\ power}$$|$$2\times 10^{-4}$$|0.7|
+|lightning|yes|yes|
+|Electrical charge saparation|Falling ice and rain|Still to be determined|
+|Hydrologic cycle|known|fundamentally difference|
+
+相对于木星、土星和海王星，地球吸收的热量是最大的，但是风却是最小的。
+所有行星的风场都是带状分布的，即使是天王星（自转轴相对于公转轴倾角为$$98^{\circ}$$）。
+木星的大红斑(Jupiter's Great Red Spot:GRS)，已经有几百年的历史了。
 
 
 
@@ -37,6 +68,50 @@ papers: true
 
 
 ## DATA SET
+
+书本的思路基本上和[张洋](https://as.nju.edu.cn/54/59/c11339a218201/page.htm)老师上课的思路一样，让我很亲切。
+首先介绍了现象，然后介绍资料，资料比较等，下面我们**按照时间顺序**对研究Jupiter的资料进行详细的介绍：
+
+### Early Astronomers
+
+首先在描述木星的大气现象上，现在人在沿用的一些来自早期天文学家的描述性词语有
+
+* belts and zones
+* brown spots and red spots
+* plumes
+* barges：discrete brown elongated ovals called “barges” 
+* festoons, and streamers
+
+
+![](https://github.com/Clynie/Clynie.github.io/blob/master/_img/jupiterSketch1.png?raw=true)![Whole disk views of Jupiter](https://github.com/Clynie/Clynie.github.io/blob/master/_img/jupiterSketch2.jpg?raw=true)
+
+
+### Traditional Earth-based telescope
+
+
+### Ground-based telescopes and Hubble Space
+
+
+### Galileo Probe
+
+
+
+
+### Juno
+
+由于但是本书时间上的局限性，并没有包括[Juno](https://www.nasa.gov/mission_pages/juno/main/index.html)和[Juno Mission](https://www.jpl.nasa.gov/missions/juno/)的详细信息。
+
+
+
+|Mission Events|Date|
+|--------------|----|
+|Launch|August 5, 2011|
+|Deep Space Maneuvers|August/September 2012|
+|Earth flyby gravity assist|October 2013|
+|Jupiter arrival and orbit insertion|July 4, 2016|
+|End of mission (deorbit into Jupiter)|July 2021|
+
+NASA has approved an update to Juno's science operations until July 2021.
 
 
 
