--- a/_posts/2020-02-22-Jupiter.md
+++ b/_posts/2020-02-22-Jupiter.md
@@ -76,14 +76,26 @@ papers: true
 
 首先在描述木星的大气现象上，现在人在沿用的一些来自早期天文学家的描述性词语有
 
-* belts and zones
-* brown spots and red spots
-* plumes
+* belts and zones: belt一般用于急流带，zones一般用于急流带之间的区域，其他还有region
+* brown spots and red spots：
+* plumes：羽化
 * barges：discrete brown elongated ovals called “barges” 
 * festoons, and streamers
 
+为了方便理解，下面从Google上搜了一些图片
 
-![](https://github.com/Clynie/Clynie.github.io/blob/master/_img/jupiterSketch1.png?raw=true)![Whole disk views of Jupiter](https://github.com/Clynie/Clynie.github.io/blob/master/_img/jupiterSketch2.jpg?raw=true)
+
+<figure class="half">
+<center class="half">
+   <img src="https://github.com/Clynie/Clynie.github.io/blob/master/_img/jupiterSketch1.png?raw=true" height="200"/><img src="https://github.com/Clynie/Clynie.github.io/blob/master/_img/jupiterSketch2.jpg?raw=true" height="200"/>
+</center>
+</figure>
+
+
+
+
+
+
 
 
 ### Traditional Earth-based telescope
