--- a/_posts/2020-02-22-Jupiter.md
+++ b/_posts/2020-02-22-Jupiter.md
@@ -60,7 +60,6 @@ papers: true
 
 
 
-![Whole disk views of Jupiter](https://github.com/Clynie/Clynie.github.io/blob/master/_img/Whole disk views of Jupiter.jpg?raw=true)
 
 
 
@@ -100,13 +99,16 @@ papers: true
 
 ### Traditional Earth-based telescope
 
+* __resolution__: 3000km --> enough to image the major atmospheric features.
+* __Pioneers 10 and 11__: improved on Earth-based resolution
+* __Voyagers 1 and 2__: breakthrough --> infrared spectrometer (IRIS)
 
 ### Ground-based telescopes and Hubble Space
 
 
 ### Galileo Probe
 
-
+### Cassini
 
 
 ### Juno
@@ -141,6 +143,7 @@ NASA has approved an update to Juno's science operations until July 2021.
 ### Belts and Zones
 
 
+![Whole disk views of Jupiter](https://github.com/Clynie/Clynie.github.io/blob/master/_img/Whole disk views of Jupiter.jpg?raw=true)
 
 
 
