--- a/_posts/2020-02-22-Jupiter.md
+++ b/_posts/2020-02-22-Jupiter.md
@@ -139,11 +139,24 @@ NASA has approved an update to Juno's science operations until July 2021.
 
 ## BANDED STRUCTURE
 
+![Whole disk views of Jupiter](https://github.com/Clynie/Clynie.github.io/blob/master/_img/Whole disk views of Jupiter.jpg?raw=true)
 
 ### Belts and Zones
 
 
-![Whole disk views of Jupiter](https://github.com/Clynie/Clynie.github.io/blob/master/_img/Whole disk views of Jupiter.jpg?raw=true)
+![Zonals and Belts of Jupiter](https://github.com/Clynie/Clynie.github.io/blob/master/_img/IMG_7C0884E561C5-1.jpeg?raw=true)
+
+Traditionally
+* The white bands are called zones.
+	* The zones are anticyclonic, which means they have 
+		* an eastward jet on the poleward side 
+		* a westward jet on the equatorward side 
+	* (in the reference frame of the planet,an anticyclone rotates clockwise in the northern hemisphere and counterclockwise in the southern hemisphere).
+* The dark bands are called belts. 
+* The zonal jets (eastward and westward currents in the atmosphere) are strongest on the boundaries between the belts and zones (Figure 6.2).
+
+
+
 
 
 
