add After Vitus trend

--- a/_posts/2020-02-18-useful.md
+++ b/_posts/2020-02-18-useful.md
@@ -6,6 +6,25 @@ excerpt: ""
 algorithm: true
 ---
 
+# Jupyter
+
+## 快捷键：
+
+### 批量注释
+
+* 在Jupyter Notebook中批量注释多行，在前面加上`#`
+
+	* 全选
+	* `ctrl` + `/`
+
+* 删除以上注释：
+	* 同上
+
+
+### 缩进
+
+* 缩进`ctrl`+`]`
+* 解除 缩进`ctrl`+`[`
 
 # 排序
 
@@ -46,6 +65,7 @@ r_tstamp	= [x for _, x in sorted(zip(serial,tstamp), key=lambda pair: pair[0])]
 >>> np.where(a==3)
 (array([0, 1]), array([2, 4]))
 ```
+
 
 # 统计个数
 
