add some command in useful

--- a/_posts/2020-02-18-useful.md
+++ b/_posts/2020-02-18-useful.md
@@ -150,6 +150,12 @@ Traceback (most recent call last):
 AttributeError: 'numpy.ndarray' object has no attribute 'count'
 ```
 
+### 查看数据类型
 
+有时候在编程的过程中会因为一些小错误花费大量时间，尤其是一些函数支持`int`,`float`,`double`，因此需要判断计算后会输出特定的类型
+
+```
+type(var).__name__
+```
 
 
