--- a/_posts/2020-02-18-useful.md
+++ b/_posts/2020-02-18-useful.md
@@ -159,3 +159,11 @@ type(var).__name__
 ```
 
 
+
+
+
+# LOGIN WITHOUT INTERP
+
+`ssh -o ServerAliveInterval=30 username@you.server.ip.address -L127.0.0.1:pre-setting-port:127.0.0.1:8889`
+
+
