--- a/_posts/2020-02-18-useful.md
+++ b/_posts/2020-02-18-useful.md
@@ -167,3 +167,11 @@ type(var).__name__
 `ssh -o ServerAliveInterval=30 username@you.server.ip.address -L127.0.0.1:pre-setting-port:127.0.0.1:8889`
 
 
+
+# INSTALL STEAM ON FEDORA
+
+```
+sudo dnf install fedora-workstation-repositories
+sudo dnf install -y steam --enablerepo=rpmfusion-nonfree-steam
+```
+
