--- a/_posts/2020-02-18-useful.md
+++ b/_posts/2020-02-18-useful.md
@@ -158,14 +158,29 @@ AttributeError: 'numpy.ndarray' object has no attribute 'count'
 type(var).__name__
 ```
 
+### 保存图片超过固定边界时：
+
+```
+
+extent = ax4.get_window_extent().transformed(fig.dpi_scale_trans.inverted())
+fig.savefig(path_data +'/' + title +'.pdf',fomat='pdf',bbox_inches=extent.expanded(2.2, 1.4))
+
+```
+
+YOU CAN CHANGE THE FORMAT `pdf` TO `png` et al.
 
 
+### 数据内部同样的数字个数：
 
+```
+sorted(X, key=X.__getitem__,reverse=True)
+```
 
 # LOGIN WITHOUT INTERP
 
-`ssh -o ServerAliveInterval=30 username@you.server.ip.address -L127.0.0.1:pre-setting-port:127.0.0.1:8889`
-
+```
+ssh -o ServerAliveInterval=30 username@you.server.ip.address -L127.0.0.1:pre-setting-port:127.0.0.1:8889
+```
 
 
 # INSTALL STEAM ON FEDORA
