add some fitting

--- a/_posts/2020-06-13-fitting.md
+++ b/_posts/2020-06-13-fitting.md
@@ -43,11 +43,11 @@ THE EQUATION SHOULD BE COMPLEX IF YOU NEED TO KNOW HOW TO COMPUTE
 AND THE DISADVANTAGE OF `origin` IS YOU WOULD NOT KNOW HOW YOU GET IT
 
 
-$ span = A2 - A1 $
+$$ span = A2 - A1 $$
 
-$ y1 = span * \frac{p}{1 +  10^{(l_1 * h_1)}}$
+$$ y1 = span * \frac{p}{1 +  10^{(l_1 * h_1)}}$$
 
 
-$ y2 = span * \frac{1-p}{1 +  10^{(l_2 * h_2)}}$
+$$ y2 = span * \frac{1-p}{1 +  10^{(l_2 * h_2)}}$$
 
-$ y = A1 + y1 + y2 $
+$$ y = A1 + y1 + y2 $$
