add cygwin terminal

--- a/_posts/2020-02-18-useful.md
+++ b/_posts/2020-02-18-useful.md
@@ -182,6 +182,20 @@ sorted(X, key=X.__getitem__,reverse=True)
 ssh -o ServerAliveInterval=30 username@you.server.ip.address -L127.0.0.1:pre-setting-port:127.0.0.1:8889
 ```
 
+对于我现在的电脑来说，由于一些原因，不能够修改屏幕保护程序，在安装了cygwin terminal 后，我在后面加入了
+```
+#!/bin/bash
+x=1
+while [ $x -le 5 ]
+do
+  sl
+done
+```
+
+用以不停的开小火车，这样就可以达到显示屏不关。
+但是大家还是让显示屏休息一下比较好。
+
+
 
 # INSTALL STEAM ON FEDORA
 
@@ -189,4 +203,8 @@ ssh -o ServerAliveInterval=30 username@you.server.ip.address -L127.0.0.1:pre-set
 sudo dnf install fedora-workstation-repositories
 sudo dnf install -y steam --enablerepo=rpmfusion-nonfree-steam
 ```
+
+
+
+
 
