--- a/_posts/2020-02-18-useful.md
+++ b/_posts/2020-02-18-useful.md
@@ -206,5 +206,68 @@ sudo dnf install -y steam --enablerepo=rpmfusion-nonfree-steam
 
 
 
+### 如何在二维平面判断任意两条曲线相交？
+
+* 首先假设两条曲线具有一一对应关系，比如
+$$
+y_1 = f_1(x_1)
+\\
+y_2 = f_2(x_2)
+$$
+	比如在地球物理学中，对应的台风（热带气旋、温带气旋、波破碎）路径往往是一个
+	纬度值$latitude$对应一个经度$longitude$，几乎不存在不同时刻涡旋经纬度不变的情况
+	也就是说可以对于路径来说可以近似表示为
+$$
+lat_1 = f_1(lon_1)
+\\
+lat_1 = f_1(lon_1)
+$$
+
+* 那么如何判断两个涡旋是否回相交？这里存在两种情况
+	* 其中一个路线固定，比如台风与海岸线的关系
+	* 另一种情况为两个台风相遇的问题
+
+	无论何种情形，解决思路大致相同，框架上主要是`一重循环`套`判断`
+
+* 首先设定判断两条曲线各个点比较的函数
+	$$
+	C=Sgn(f_1(x_1(t),t) - f_2(x_1(t),t))
+	$$
+	用来表示在某一个时刻，两条路径的中点的上下位置
+	注意连个`x`采用的是同一个值。
+	如果$C>0$那么$f_1$在$f_2$之上
+	如果$C<0$那么$f_1$在$f_2$之下
+* 这里比较的是两条曲线存在时间变化的情况，当其中一个是固定曲线，比如海岸线之于台风，那么就不存在变量`t`
+* 最后这里仅仅比较是否相交，并不比较存在几个焦点的情况，那么在后面加个`break`用以节省计算资源
+
+
+最后个人觉得这是个比较笨但是容易理解的方法，需要进一步提高计算能力
+
+
+```python
+# latsin and lonsin are baseline
+# latsin_ and lonsin_ are the transform-line
+var = []
+y,x = (latsin[1:] - latsin[:-1])/2, (lonsin[1:] - lonsin[:-1])/2
+a = y/x
+b = y - a*x
+y_, x_ = (latsin[1:] + latsin[:-1])/2, (lonsin[1:] + lonsin[:-1])/2
+judge = y > (a*x_ + b)
+if True in judge and False in judge
+	var.append(lonsin,latsin)
+```
+
+
+
+
+
+
+
+
+### LaTex 命令总结
+
+转自[樱花赞](https://www.cnblogs.com/1024th/)
+[地址](https://www.cnblogs.com/1024th/p/11623258.html)
+
 
 
