--- a/_posts/2020-02-18-useful.md
+++ b/_posts/2020-02-18-useful.md
@@ -160,7 +160,7 @@ type(var).__name__
 
 ### 保存图片超过固定边界时：
 
-```
+```python
 
 extent = ax4.get_window_extent().transformed(fig.dpi_scale_trans.inverted())
 fig.savefig(path_data +'/' + title +'.pdf',fomat='pdf',bbox_inches=extent.expanded(2.2, 1.4))
@@ -172,7 +172,7 @@ YOU CAN CHANGE THE FORMAT `pdf` TO `png` et al.
 
 ### 数据内部同样的数字个数：
 
-```
+```python
 sorted(X, key=X.__getitem__,reverse=True)
 ```
 
@@ -183,7 +183,7 @@ ssh -o ServerAliveInterval=30 username@you.server.ip.address -L127.0.0.1:pre-set
 ```
 
 对于我现在的电脑来说，由于一些原因，不能够修改屏幕保护程序，在安装了cygwin terminal 后，我在后面加入了
-```
+```bash
 #!/bin/bash
 x=1
 while [ $x -le 5 ]
@@ -199,7 +199,7 @@ done
 
 # INSTALL STEAM ON FEDORA
 
-```
+```bash
 sudo dnf install fedora-workstation-repositories
 sudo dnf install -y steam --enablerepo=rpmfusion-nonfree-steam
 ```
