--- a/_posts/2020-02-18-useful.md
+++ b/_posts/2020-02-18-useful.md
@@ -254,7 +254,7 @@ b = y - a*x
 y_, x_ = (latsin[1:] + latsin[:-1])/2, (lonsin[1:] + lonsin[:-1])/2
 judge = y > (a*x_ + b)
 if True in judge and False in judge
-	var.append(lonsin,latsin)
+	var.append([lonsin,latsin])
 ```
 
 
