add python read grib2

--- a/_posts/2020-02-18-useful.md
+++ b/_posts/2020-02-18-useful.md
@@ -271,3 +271,34 @@ if True in judge and False in judge
 
 
 
+### python 读取grib2二进制文件：
+
+
+```python
+
+# install xarray and cfgrib
+# 1. !conda install -c conda-forge cfgrib
+#    !conda install - c conda-forge eccodes
+#    !pip install cfgrib - -user
+# 2. in windows the environment should be update
+#   if you use vscode, the path should be added in settings.json
+#   "ECCODES_DEFINITION_PATH": "D:\\Users\\Lynie\\anaconda3\\Library\\share\\eccodes\\definitions"
+# the path should be different depend on the install path
+# then you can compile the code BELOW
+# SOMETIME WILL HAVE ERROR OR WARNING, DO NOT MIND 
+# CHECK http://xarray.pydata.org/en/stable/generated/xarray.open_dataset.html
+# 
+
+
+
+import os
+os.environ["ECCODES_DEFINITION_PATH"] = "D:\\Users\\USERNAME\\anaconda3\\Library\\share\\eccodes\\definitions"
+import xarray as xr
+import cfgrib
+ds = xr.open_dataset(
+    'YOUR FILE.BIN', 'rb',engine='cfgrib', backend_kwargs={'filter_by_keys': {'stepType': 'instant', 'typeOfLevel': 'surface'}})
+print(ds)
+
+
+```
+
