--- a/_posts/2020-02-18-useful.md
+++ b/_posts/2020-02-18-useful.md
@@ -257,10 +257,19 @@ if True in judge and False in judge
 	var.append([lonsin,latsin])
 ```
 
+* 这里的代码并没有编译或者debug，细节需要精修
 
 
+### 点到任意一条曲线之间距离最短
 
-
+* 首先假设有一条曲线$y = f(x)$
+* 曲线外不相交的一点为$A(x_0,y_0)$
+* 数学上：
+	* 首先对曲线求导，求出每个点所对应的切线的斜率
+	* 接着计算所在点切线的垂线是否与所求$A$点相交
+* 或者我们可以直接计算曲线上每个点与$A$之间的距离
+	* 这个方法主要适用于曲线上存在有限个点的情况
+	* 比如，台风登陆我国，海岸线上的观测站就是有限的
 
 
 
@@ -301,4 +310,6 @@ print(ds)
 
 
 ```
+
+
 
