--- a/_posts/2020-02-18-useful.md
+++ b/_posts/2020-02-18-useful.md
@@ -273,6 +273,24 @@ if True in judge and False in judge
 
 
 
+
+
+#### 在地球上测量两点之间的距离
+
+
+Geopy可以用 geodesic distance 或 great-circle distance ，默认测地线距离作为函数geopy.distance.distance
+
+大圆距离（ great_circle ）使用地球的球形模型，使用国际大地测量学和地球物理学联合会定义的平均地球半径，（2）a + b) /3=6371.0087714150598公里，约6371.009公里（WGS-84），**误差高达0.5%**。半径值存储在 distance.EARTH_RADIUS ，因此可以对其进行自定义（但是，它应该始终以公里为单位）。
+
+测地距离是地球椭球面模型表面上最短的距离。默认算法使用的方法是 Karney (2013) (geodesic) ；这是精确的四舍五入并始终收敛。年长的 deprecated 方法由于 Vincenty (1975) (vincenty) 也可用；这仅精确到0.2 mm，距离计算无法收敛到几乎相反的点。
+
+* meters 米(简写m)
+* kilometers 千米(简写km)
+* miles 英里(简写mi)
+* nautical 海里(简写nm)
+* feet 英尺(简写ft)
+
+
 ### LaTex 命令总结
 
 转自[樱花赞](https://www.cnblogs.com/1024th/)
