--- a/_posts/2020-02-18-useful.md
+++ b/_posts/2020-02-18-useful.md
@@ -278,7 +278,7 @@ if True in judge and False in judge
 #### 在地球上测量两点之间的距离
 
 
-Geopy可以用 geodesic distance 或 great-circle distance ，默认测地线距离作为函数geopy.distance.distance
+[Geopy](https://www.osgeo.cn/geopy/)可以用 geodesic distance 或 great-circle distance ，默认测地线距离作为函数geopy.distance.distance
 
 大圆距离（ great_circle ）使用地球的球形模型，使用国际大地测量学和地球物理学联合会定义的平均地球半径，（2）a + b) /3=6371.0087714150598公里，约6371.009公里（WGS-84），**误差高达0.5%**。半径值存储在 distance.EARTH_RADIUS ，因此可以对其进行自定义（但是，它应该始终以公里为单位）。
 
