--- a/_posts/2020-02-18-useful.md
+++ b/_posts/2020-02-18-useful.md
@@ -291,6 +291,13 @@ if True in judge and False in judge
 * feet 英尺(简写ft)
 
 
+
+
+#### time.clock
+
+module ‘time’ has no attribute ‘clock’
+time.clock（）已经在新的版本中移除了。在Python3.8中更新了。“The function time.clock() has been removed, after having been deprecated since Python 3.3: use time.perf_counter() or time.process_time() instead, depending on your requirements, to have well-defined behavior. (Contributed by Matthias Bussonnier in bpo-36895.)”
+
 ### LaTex 命令总结
 
 转自[樱花赞](https://www.cnblogs.com/1024th/)
