--- a/_posts/2020-02-18-useful.md
+++ b/_posts/2020-02-18-useful.md
@@ -338,3 +338,13 @@ print(ds)
 
 
 
+### 获得中国各省的边界数据
+1. 进入[网址](https://datav.aliyun.com/tools/atlas/)选择需要的省
+2. 下载`geojson`文件， 或者复制`.json`文件的地址到浏览器，出现的数据就是边界数据
+3. （可选择）进入网址[https://mapshaper.org/](https://mapshaper.org/)导入`.json`文件，导出`.shp`文件
+4. 画图叠加
+
+
+
+
+
