--- a/_posts/2020-02-18-useful.md
+++ b/_posts/2020-02-18-useful.md
@@ -346,5 +346,29 @@ print(ds)
 
 
 
+### 直角坐标插值到极坐标
+
+#### MATLAB
+
+```
+[X,Y] = meshgrid((lonsin - lon0),(latsin - lat0));
+[x2, y2] = meshgrid(r1,theta1);
+S = scatteredInterpolant(X(:),Y(:),V(:));
+```
+
+#### Python
+
+```
+thetai,ri  = 1,1 # this is the angle/length interval unit should be degree/km
+r          = np.arange(0,r/1e3 + 1e-100, ri)
+theta      = np.arange(0,theta + 1e-100, thetai)
+xx,yy      = np.meshgrid(r,theta)
+points_cat = np.concatenate([np.array(lons_).reshape(-1,1), np.array(lats_).reshape(-1,1)], axis=1)
+points_pol = np.concatenate([np.array(xx).reshape(-1,1), np.array(yy).reshape(-1,1)], axis=1)
+zi         = interpolate.griddata(points_cat, var.flatten(), points_pol, method='cubic')
+f          = zi.reshape((len(theta),len(r)))
+```
+
+
 
 
